--- a/mementomori.css
+++ b/mementomori.css
@@ -3,15 +3,13 @@ body{
     background-color:#FCFBFA; 
     color:#4B4A4A;
 }
-.container{
-    
-}
 .decade{
     display: flex;
-    margin-top: 20px
+    margin-top: 20px;
 }
 .boxes{
     margin: auto;
+    margin-right: 10px;
     display: grid;
     grid-template-columns: repeat(53,auto);
     row-gap: 4px;
@@ -21,11 +19,22 @@ body{
 .box{
     width: 8px;
     height: 8px;
-    border: 1px solid #4B4A4A;
+    border: 1px solid #111111;
+    border-radius: 1px;
 }
 .enabled{
-    background-color: #252525;
+    background-color: #3a3a3a;
 }
 .box-break{
     margin-right: 20px;
+}
+.year{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-right: auto;
+}
+.paragraph{
+    margin: auto;
+    width: 50em;
 }
